fix: project-broken color in dark mode

--- a/site/src/styles/Home.module.css
+++ b/site/src/styles/Home.module.css
@@ -45,6 +45,7 @@
 
 .projectBroken {
   background: yellow;
+  color: black;
   padding: 1rem;
   line-height: 1;
 }
